[package]
name = "tower_defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_rapier3d = "0.23"
bevy_mod_picking = { version = "0.17", features = ["backend_rapier"] }
bevy_panorbit_camera = "0.10"
rand = "0.8"
