[package]
name = "tower_defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_rapier3d = "0.23"
bevy_mod_picking = { version = "0.17", features = [
    "backend_egui",
    "backend_rapier",
] }
bevy_panorbit_camera = "0.13"
rand = "0.8"
bevy-inspector-egui = "0.22"
bevy_egui = "0.24"
bevy_common_assets = { version = "0.9", features = ["toml"] }
serde = "1.0"
